--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script src="js/three.js"></script>
+    <script src="custom_nodes/three.js/build/three.module.js"></script>
     <script>
 			// Our Javascript will go here.
         const scene = new THREE.Scene();
