--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ pointerlock jumping box camera
 
 <head>
 	<title>three.js - pointerlock controls</title>
+	<link rel="icon" href="/favicon.ico" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link type="text/css" rel="stylesheet" href="main.css">
